Column overflow bug fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,20 +10,18 @@ h1 {
   font-family: 'Montserrat', sans-serif;
 }
 
-
 .sidebar {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
   position: fixed;
-}
-
-/* Intro Section */
-.intro-div {
-  padding: 2rem 5% 1rem 5%;
+  padding: 2rem 5% 2rem 5%;
   text-align: center;
   background-color: #004a7c;
   color: #f8f9fa;
+  margin: auto;
 }
+
+/* Intro Section */
 
 .name {
   font-weight: 500;
@@ -140,11 +138,11 @@ h1 {
   padding: 2%;
 }
 
-.project-git {
+.project-link {
   color: #444444;
 }
 
-.project-git:hover {
+.project-:hover {
   color: #777777;
 }
 
@@ -153,6 +151,11 @@ h1 {
 
   .sidebar {
     position: static;
+    height: auto;
+  }
+
+  .name {
+    font-size: 4.5rem;
   }
 
   .statement {
